--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-  <!-- Write your markup here  -->
-
-  <script src="main.js" charset="utf-8"></script>
+<input id="user-weight" type="text" placeholder="Weight (lbs)" />
+<select id="planets">Planets</select>
+<button id="calculate-button">Calculate</button>
+<p id="output"></p>
+<script src="main.js" charset="utf-8"></script>
 </body>
 
 </html>
